--- a/app/src/main/res/layout/activity_monitoring_users.xml
+++ b/app/src/main/res/layout/activity_monitoring_users.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.MonitoringUsersActivity"
-    android:background="@drawable/card">
+    tools:context=".app.MonitoringUsersActivity">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardview1"
@@ -16,8 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        app:cardBackgroundColor="@color/colorPrimary">
+        android:layout_alignParentEnd="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -32,10 +29,7 @@
             android:layout_marginTop="10dp"
             android:ems="10"
             android:hint="@string/add_group_name"
-            android:inputType="textPersonName"
-            android:textColor="?attr/colorBackgroundFloating"
-            android:textColorLink="?attr/colorBackgroundFloating"
-            android:textColorHint="?attr/colorBackgroundFloating"/>
+            android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/add_to_group_btn"
