--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".app.AccountInfoActivity"
-    android:background="@drawable/card">
+    tools:context=".app.AccountInfoActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -14,8 +12,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
-        app:cardBackgroundColor="@color/colorPrimary">
+        android:layout_marginTop="5dp">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -45,8 +42,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/full_name"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/accountInfoUserName"
@@ -57,10 +53,7 @@
                     android:ems="10"
                     android:hint="@string/full_name_sign"
                     android:inputType="none"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -69,8 +62,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/e_mail"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/accountInfoEmail"
@@ -82,10 +74,7 @@
                     android:hint="@string/e_mail_hint"
                     android:inputType="none"
                     android:textStyle="bold"
-                    tools:ignore="TextFields"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    tools:ignore="TextFields" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -94,8 +83,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/birthday"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -111,10 +99,7 @@
                         android:ems="10"
                         android:hint="@string/birth_month"
                         android:inputType="date"
-                        android:maxLength="2"
-                        android:textColor="?attr/colorBackgroundFloating"
-                        android:textColorLink="?attr/colorBackgroundFloating"
-                        android:textColorHint="?attr/colorBackgroundFloating"/>
+                        android:maxLength="2" />
 
                     <EditText
                         android:id="@+id/accountInfoBirthYear"
@@ -124,10 +109,7 @@
                         android:ems="10"
                         android:hint="@string/birth_year"
                         android:inputType="date"
-                        android:maxLength="4"
-                        android:textColor="?attr/colorBackgroundFloating"
-                        android:textColorLink="?attr/colorBackgroundFloating"
-                        android:textColorHint="?attr/colorBackgroundFloating"/>
+                        android:maxLength="4" />
                 </LinearLayout>
 
                 <TextView
@@ -137,8 +119,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/address"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/accountInfoAddress"
@@ -147,10 +128,7 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/address_sign_up"
-                    android:inputType="textPersonName"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"/>
+                    android:inputType="textPersonName" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -159,8 +137,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/home_phone"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/accountInfoHomePhone"
@@ -169,10 +146,7 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/home_phone_sign_up"
-                    android:inputType="phone"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"/>
+                    android:inputType="phone" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -181,9 +155,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/cell_phone"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    />
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/accountInfoCellPhone"
@@ -192,10 +164,7 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/cell_phone_sign_up"
-                    android:inputType="phone"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"/>
+                    android:inputType="phone" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -204,8 +173,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/grade"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/accountInfoGrade"
@@ -214,10 +182,7 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/grade_students_sign_up"
-                    android:inputType="textPersonName"
-                    android:textColorLink="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:inputType="textPersonName" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -226,8 +191,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/teacher"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/accountInfoTeacher"
@@ -236,10 +200,7 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/teacher_students_sign_up"
-                    android:inputType="textPersonName"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"/>
+                    android:inputType="textPersonName" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -248,8 +209,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/emergency_contact_info"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/accountInfoEmergencyContact"
@@ -258,10 +218,7 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/emergency_contact_info_sign_up"
-                    android:inputType="textPersonName"
-                    android:textColorLink="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColor="?attr/colorBackgroundFloating"/>
+                    android:inputType="textPersonName" />
             </LinearLayout>
         </ScrollView>
     </android.support.v7.widget.CardView>
