--- a/app/src/main/res/layout/activity_add_monitoring.xml
+++ b/app/src/main/res/layout/activity_add_monitoring.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".app.AddMonitoringActivity"
-    android:background="@drawable/card">
+    tools:context=".app.AddMonitoringActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        app:cardBackgroundColor="@color/colorPrimary">
+        android:layout_centerInParent="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,8 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/input_user_email"
-                android:textSize="18sp"
-                android:textColor="?attr/colorBackgroundFloating"/>
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/find_user_edit_txt"
@@ -37,10 +33,7 @@
                 android:hint="@string/user_email_hint"
                 android:inputType="textEmailAddress"
                 tools:layout_editor_absoluteX="28dp"
-                tools:layout_editor_absoluteY="135dp"
-                android:textColor="?attr/colorBackgroundFloating"
-                android:textColorHint="?attr/colorBackgroundFloating"
-                android:textColorLink="?attr/colorBackgroundFloating"/>
+                tools:layout_editor_absoluteY="135dp" />
 
             <Button
                 android:id="@+id/add_monitoring_user_button"
