--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".app.CreateGroup"
-    android:background="@drawable/card">
+    tools:context=".app.CreateGroup">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        app:cardBackgroundColor="@color/colorPrimary">
+        android:layout_centerInParent="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,10 +24,7 @@
                 android:layout_marginBottom="10dp"
                 android:ems="10"
                 android:hint="@string/enter_group_name"
-                android:inputType="textPersonName"
-                android:textColor="?attr/colorBackgroundFloating"
-                android:textColorHint="?attr/colorBackgroundFloating"
-                android:textColorLink="?attr/colorBackgroundFloating"/>
+                android:inputType="textPersonName" />
 
             <Button
                 android:id="@+id/starting_location"
