--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".app.LeaderboardActivity"
-    android:background="@drawable/card">
+    tools:context=".app.LeaderboardActivity">
 
     <TextView
         android:id="@+id/leaderboard"
@@ -15,8 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
         android:text="Leaderboard"
-        android:textSize="24sp"
-        android:textColor="?attr/colorBackgroundFloating"/>
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/your_score"
@@ -24,15 +21,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/leaderboard"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:textColor="?attr/colorBackgroundFloating"/>
+        android:layout_marginBottom="10dp" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/your_score"
-        android:layout_margin="10dp"
-        app:cardBackgroundColor="@color/colorPrimary">
+        android:layout_margin="10dp">
 
         <ListView
             android:id="@+id/leaderboard_list"
