--- a/app/src/main/res/layout/activity_manage_group.xml
+++ b/app/src/main/res/layout/activity_manage_group.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.ManageGroups"
-    android:background="@drawable/card">
+    tools:context=".app.ManageGroups">
 
     <include
         android:id="@+id/groupsToolbar"
@@ -24,7 +23,6 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/groupsToolbar"
-            android:background="@drawable/lightblue"
             />
     </android.support.v7.widget.CardView>
 
