--- a/app/src/main/res/layout/activity_manage_messages.xml
+++ b/app/src/main/res/layout/activity_manage_messages.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.ManageMessagesActivity"
-    android:background="@drawable/card">
+    tools:context=".app.ManageMessagesActivity">
 
     <include
         android:id="@+id/messagesToolbar"
@@ -19,8 +17,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/messagesToolbar"
-        android:layout_margin="15dp"
-        android:background="@drawable/small">
+        android:layout_margin="15dp">
 
         <ListView
             android:id="@+id/messages_listview"
@@ -28,8 +25,7 @@
             android:layout_height="451dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/messagesToolbar"
-            android:background="@drawable/card"/>
+            android:layout_below="@+id/messagesToolbar" />
 
     </android.support.v7.widget.CardView>
 
