--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.PermissionActivity"
-    android:background="@drawable/card">
+    tools:context=".app.PermissionActivity">
 
     <include
         android:id="@+id/parentLinkToolbar"
@@ -24,8 +22,7 @@
         android:id="@+id/permission_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:background="@drawable/card"/>
+        android:layout_alignParentStart="true" />
 
     </android.support.v7.widget.CardView>
 
