--- a/app/src/main/res/layout/activity_rewards_shop.xml
+++ b/app/src/main/res/layout/activity_rewards_shop.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.RewardShopActivity"
-    android:background="@drawable/card">
+    tools:context=".app.RewardShopActivity">
 
 
     <TextView
@@ -21,8 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="?attr/colorBackgroundFloating"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/reward_list"
