--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".app.AccountInfoActivity"
-    android:background="@drawable/card">
+    tools:context=".app.AccountInfoActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        app:cardBackgroundColor="@color/colorPrimary">
+        android:layout_margin="15dp">
 
         <ScrollView
             android:layout_width="wrap_content"
@@ -22,8 +19,7 @@
             android:layout_marginBottom="15dp"
             android:layout_marginTop="15dp"
             android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:background="@drawable/small">
+            android:paddingRight="15dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -31,8 +27,7 @@
                 android:layout_gravity="center_horizontal"
                 android:orientation="vertical"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:background="@drawable/small">
+                android:paddingRight="20dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -40,7 +35,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/full_name"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -52,10 +46,7 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/full_name_sign"
-                    android:inputType="none"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"/>
+                    android:inputType="none" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -63,7 +54,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/e_mail"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -76,10 +66,7 @@
                     android:ems="10"
                     android:hint="@string/e_mail_hint"
                     android:inputType="none"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    tools:ignore="TextFields"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"/>
+                    tools:ignore="TextFields" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -87,7 +74,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/birthday"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -105,10 +91,7 @@
                         android:editable="false"
                         android:ems="10"
                         android:hint="@string/birth_month"
-                        android:inputType="none"
-                        android:textColor="?attr/colorBackgroundFloating"
-                        android:textColorHint="?attr/colorBackgroundFloating"
-                        android:textColorLink="?attr/colorBackgroundFloating"/>
+                        android:inputType="none" />
 
                     <EditText
                         android:id="@+id/userInfoBirthYear"
@@ -118,10 +101,7 @@
                         android:editable="false"
                         android:ems="10"
                         android:hint="@string/birth_year"
-                        android:inputType="none"
-                        android:textColor="?attr/colorBackgroundFloating"
-                        android:textColorHint="?attr/colorBackgroundFloating"
-                        android:textColorLink="?attr/colorBackgroundFloating"/>
+                        android:inputType="none" />
                 </LinearLayout>
 
                 <TextView
@@ -130,7 +110,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/address"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -142,10 +121,7 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/address_sign_up"
-                    android:inputType="none"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"/>
+                    android:inputType="none" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -153,7 +129,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/home_phone"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -166,10 +141,7 @@
                     android:ems="10"
                     android:hint="@string/home_phone_sign_up"
                     android:inputType="none"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    tools:ignore="TextFields"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"/>
+                    tools:ignore="TextFields" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -177,7 +149,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/cell_phone"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -190,10 +161,7 @@
                     android:ems="10"
                     android:hint="@string/cell_phone_sign_up"
                     android:inputType="none"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    tools:ignore="TextFields"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"/>
+                    tools:ignore="TextFields" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -201,7 +169,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/grade"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -213,10 +180,7 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/grade_students_sign_up"
-                    android:inputType="none"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"/>
+                    android:inputType="none" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -224,7 +188,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/teacher"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -236,10 +199,7 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/teacher_students_sign_up"
-                    android:inputType="none"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"/>
+                    android:inputType="none" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -247,7 +207,6 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/emergency_contact_info"
-                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -259,10 +218,7 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/emergency_contact_info_sign_up"
-                    android:inputType="none"
-                    android:textColor="?attr/colorBackgroundFloating"
-                    android:textColorHint="?attr/colorBackgroundFloating"
-                    android:textColorLink="?attr/colorBackgroundFloating"/>
+                    android:inputType="none" />
             </LinearLayout>
         </ScrollView>
     </android.support.v7.widget.CardView>
