--- a/app/src/main/res/layout/group_layout.xml
+++ b/app/src/main/res/layout/group_layout.xml
@@ -2,16 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:background="@drawable/small">
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/group_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textColor="?attr/colorBackgroundFloating" />
+        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <TextView
         android:id="@+id/group_id"
@@ -20,7 +18,6 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/group_name"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="14sp" />
 
     <Switch
