--- a/app/src/main/res/layout/leaderboard_layout.xml
+++ b/app/src/main/res/layout/leaderboard_layout.xml
@@ -3,15 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="8dp"
-    android:paddingTop="8dp"
-    android:background="@drawable/small">
+    android:paddingTop="8dp">
 
     <TextView
         android:id="@+id/userNameLeaderboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="?attr/colorBackgroundFloating"/>
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/scoreLeaderboard"
@@ -20,6 +18,5 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:foregroundGravity="center_vertical"
-        android:gravity="right|center_vertical|end"
-        android:textColor="?attr/colorBackgroundFloating"/>
+        android:gravity="right|center_vertical|end" />
 </RelativeLayout>
