--- a/app/src/main/res/layout/messages_layout.xml
+++ b/app/src/main/res/layout/messages_layout.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10sp"
-    android:background="@drawable/small">
+    android:padding="10sp">
 
     <TextView
         android:id="@+id/message_header"
@@ -14,7 +12,6 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/message_context"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="14sp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="39dp" />
@@ -24,8 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textColor="?attr/colorBackgroundFloating" />
+        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <TextView
         android:id="@+id/message_status"
@@ -34,7 +30,6 @@
         android:layout_alignEnd="@+id/message_header"
         android:layout_alignTop="@+id/message_header"
         android:layout_below="@+id/message_context"
-        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="14sp" />
 
 </RelativeLayout>
