--- a/app/src/main/res/layout/parent_details.xml
+++ b/app/src/main/res/layout/parent_details.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5dp"
-    android:background="@drawable/small">
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/parentDetailsName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/parentDetailsEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="14sp" />
 
     <ListView
