--- a/app/src/main/res/layout/permission_layout_details.xml
+++ b/app/src/main/res/layout/permission_layout_details.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/small"
     android:padding="5sp">
 
     <TextView
@@ -10,8 +9,7 @@
         android:layout_width="132dp"
         android:layout_height="wrap_content"
         android:text="@string/request_from"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textColor="?attr/colorBackgroundFloating" />
+        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <Button
         android:id="@+id/btnAccept"
@@ -40,7 +38,6 @@
         android:layout_below="@+id/btnAccept"
         android:text="TextView"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="14sp" />
 
     <TextView
@@ -50,6 +47,5 @@
         android:layout_alignBottom="@+id/txtPermissionAction"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/btnAccept"
-        android:text="TextView"
-        android:textColor="?attr/colorBackgroundFloating" />
+        android:text="TextView" />
 </RelativeLayout>
