--- a/app/src/main/res/layout/activity_group_details.xml
+++ b/app/src/main/res/layout/activity_group_details.xml
@@ -13,7 +13,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="43dp"
-        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="18sp" />
 
     <TextView
@@ -23,7 +22,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="66dp"
-        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="18sp" />
 
     <LinearLayout
@@ -32,19 +30,25 @@
         android:orientation="horizontal"
         android:baselineAligned="false">
 
-            <ListView
-                android:id="@+id/groupUserList"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="25dp" />
+        <ListView
+            android:id="@+id/groupUserList"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingBottom="25dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="25dp" />
 
-            <ListView
-                android:id="@+id/parentUserList"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="25dp" />
+        <ListView
+            android:id="@+id/parentUserList"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingBottom="25dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="25dp" />
 
     </LinearLayout>
 
